--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "langchain": "^0.3.19",
     "next": "15.2.4",
     "openai": "^4.91.1",
+    "papaparse": "^5.5.2",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0"
@@ -29,6 +30,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.15",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
